--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "lib",
+  "homepage": "https://MarcusRibeiroDev.github.io/library_free",
+  "name": "library_free",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,14 +8,16 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "firebase": "^10.8.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
